# aethos

./: .gitignore  .prettierignore  .prettierrc.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250115090000_init.sql  20250116093000_chat_history.sql  20250116094500_mcp_tables.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: chat.rs  mcp.rs  mod.rs  preferences.rs  providers.rs
src-tauri/src/config/: crypto.rs  database.rs  error.rs  mod.rs  paths.rs  service.rs
src-tauri/src/services/: chat.rs
src/app/: providers.tsx
src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  textarea.tsx
src/features/chat/api/: chat.client.ts  history.client.ts
src/features/chat/components/: ChatHistoryPanel.tsx  ChatInput.tsx  ChatScreen.tsx
src/features/chat/state/: chat.store.ts  history.store.ts
src/features/mcp/api/: mcp.client.ts
src/features/mcp/components/: McpSettings.tsx
src/features/mcp/state/: mcp.store.ts
src/features/onboarding/components/: OnboardingWizard.tsx
src/features/onboarding/state/: onboarding.store.ts
src/features/preferences/state/: preferences.store.ts
src/features/settings/: constants.ts  types.ts
src/i18n/: I18nProvider.tsx  translations.ts  types.ts
src/i18n/locales/: en.ts  fr-FR.ts  zh-CN.ts
(+11 files in other folders)
