[package]
name = "aethos"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
build = "build.rs"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
directories = "5.0.1"
dotenvy = "0.15.7"
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "stream"] }
ring = { version = "0.17.8", features = ["std"] }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tauri = { version = "2.9.3", features = [] }
futures-util = "0.3.30"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dev-dependencies]
tempfile = "3.13.0"

